--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.4.1",
+    "react-snowfall": "^1.0.2",
+    "react-snowstorm": "^0.0.3",
     "stripe": "^8.128.0"
   },
   "scripts": {
