--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@stripe/stripe-js": "^1.11.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-snowfall": "^1.0.2",
     "react-snowstorm": "^0.0.3",
