--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@stripe/stripe-js": "^1.11.0",
+    "dotenv": "^8.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-snowfall": "^1.0.2",
+    "react-snowstorm": "^0.0.3",
     "stripe": "^8.128.0"
   },
   "scripts": {
