--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@stripe/stripe-js": "^1.11.0",
     "dotenv": "^8.2.0",
+    "json-loader": "^0.5.7",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.2.0",
