--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "dotenv": "^8.2.0",
     "json-loader": "^0.5.7",
     "react": "^16.11.0",
+    "react-confetti": "^6.0.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-snowfall": "^1.0.2",
     "react-snowstorm": "^0.0.3",
+    "react-use": "^15.3.6",
     "stripe": "^8.128.0"
   },
   "scripts": {
