--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-snowfall": "^1.0.2",
     "react-snowstorm": "^0.0.3",
     "react-use": "^15.3.6",
-    "stripe": "^8.128.0"
+    "stripe": "^8.128.0",
+    "use-sound": "^2.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
